WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257476
[GStreamer][WebRTC] Tests crashing due to empty mediastream ID
https://bugs.webkit.org/show_bug.cgi?id=257476
Summary
[GStreamer][WebRTC] Tests crashing due to empty mediastream ID
Philippe Normand
Reported
2023-05-30 03:16:51 PDT
(gdb) bt #0 0x00007f1ce3d3790e in WTFCrash() () at /var/home/phil/WebKit/Source/WTF/wtf/Assertions.cpp:327 #1 0x00007f1ce70cde8b in WTFCrashWithInfo(int, char const*, char const*, int) () at WTF/Headers/wtf/Assertions.h:762 #2 0x00007f1cec8ace42 in WebCore::MediaStreamPrivate::MediaStreamPrivate(WTF::Ref<WTF::Logger const, WTF::RawPtrTraits<WTF::Logger const> >&&, WTF::Vector<WTF::Ref<WebCore::MediaStreamTrackPrivate, WTF::RawPtrTra its<WebCore::MediaStreamTrackPrivate> >, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::String&&) (this=0x7f1ccf4940e0, logger=..., tracks=..., id=...) at /var/home/phil/WebKit/Source/WebCore/platform/mediastream/MediaStreamPrivate.cpp:76 #3 0x00007f1ce8ae3a25 in WebCore::MediaStreamPrivate::create(WTF::Ref<WTF::Logger const, WTF::RawPtrTraits<WTF::Logger const> >&&, WTF::Vector<WTF::Ref<WebCore::MediaStreamTrackPrivate, WTF::RawPtrTraits<WebCore: :MediaStreamTrackPrivate> >, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::String&&) (logger=..., tracks=..., id=...) at /var/home/phil/WebKit/Source/WebCore/platform/mediastream/MediaStreamPrivate.h:74 #4 0x00007f1ce8ac786f in WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0::operator()() (this=0x7ffdec7b3da8) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:845 #5 0x00007f1ce8ac77ca in WTF::HashMapEnsureTranslator<WTF::HashMap<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> >, WTF:: DefaultHash<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > >, WTF::HashTab leTraits>::KeyValuePairTraits, WTF::DefaultHash<WTF::String> >::translate<WTF::KeyValuePair<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCor e::MediaStream> > >, WTF::String const&, WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0>(WTF::KeyValuePair<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::Med iaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > >&, WTF::String const&, WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0&&) (location=..., key=..., functor=...) at WTF/Headers/wtf/HashMap.h:245 #6 0x00007f1ce8ac76e7 in WTF::HashTable<WTF::String, WTF::KeyValuePair<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > > >, WTF::DefaultHash<WTF ::String>, WTF::HashMap<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> >, WTF::DefaultHash<WTF::String>, WTF::HashTraits<WT F::String>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > >, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTrai ts<WTF::String> >::add<WTF::HashMapEnsureTranslator<WTF::HashMap<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> >, WTF::Def aultHash<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > >, WTF::HashTableT raits>::KeyValuePairTraits, WTF::DefaultHash<WTF::String> >, WTF::String const&, WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0>(WTF::String const&, WebCore::GStreamerMediaEndpoint::me diaStreamFromRTCStream(WTF::String)::$_0&&) (this=0x7f1ccf193a00, key=..., extra=...) at WTF/Headers/wtf/HashTable.h:938 #7 0x00007f1ce8ac74c0 in WTF::HashMap<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> >, WTF::DefaultHash<WTF::String>, WTF ::HashTraits<WTF::String>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > >, WTF::HashTableTraits>::inlineEnsure<WTF:: String const&, WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0>(WTF::String const&, WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0&&) (this=0x7f1ccf193a00, key=..., functor=...) at WTF/Headers/wtf/HashMap.h:401 #8 0x00007f1ce8ab99e0 in WTF::HashMap<WTF::String, WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> >, WTF::DefaultHash<WTF::String>, WTF ::HashTraits<WTF::String>, WTF::HashTraits<WTF::RefPtr<WebCore::MediaStream, WTF::RawPtrTraits<WebCore::MediaStream>, WTF::DefaultRefDerefTraits<WebCore::MediaStream> > >, WTF::HashTableTraits>::ensure<WebCore::GS treamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0>(WTF::String const&, WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String)::$_0&&) (this=0x7f1ccf193a00, key=..., functor=...) at WTF/Headers/wtf/HashMap.h:457 #9 0x00007f1ce8ab9976 in WebCore::GStreamerMediaEndpoint::mediaStreamFromRTCStream(WTF::String) (this=0x7f1ccf1939c0, mediaStreamId=...) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:843 #10 0x00007f1ce8aba159 in WebCore::GStreamerMediaEndpoint::addRemoteStream(_GstPad*) (this=0x7f1ccf1939c0, pad=0x7f1c240aa3e0) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:921
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-30 03:18:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14475
EWS
Comment 2
2023-05-31 05:58:51 PDT
Committed
264727@main
(e07e832d0677): <
https://commits.webkit.org/264727@main
> Reviewed commits have been landed. Closing PR #14475 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-31 05:59:18 PDT
<
rdar://problem/110058755
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug