[GStreamer][WebRTC] Tests crashing due to empty mediastream ID https://bugs.webkit.org/show_bug.cgi?id=257476

Reviewed by Xabier Rodriguez-Calvar.

The !operator of String is not about checking the string is empty, we need to check with isEmpty().
Not sure if that recently changed or something...

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::addRemoteStream):

Canonical link: https://commits.webkit.org/264727@main