Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp
@@ -886,7 +886,7 @@ void GStreamerMediaEndpoint::addRemoteStream(GstPad* pad)
             mediaStreamId = String::fromLatin1(msid.get());
     }
 
-    if (!mediaStreamId) {
+    if (mediaStreamId.isEmpty()) {
         if (const char* msidAttribute = gst_sdp_media_get_attribute_val(media, "msid")) {
             auto components = makeString(msidAttribute).split(' ');
             if (components.size() == 2)
@@ -894,7 +894,7 @@ void GStreamerMediaEndpoint::addRemoteStream(GstPad* pad)
         }
     }
 
-    if (!mediaStreamId) {
+    if (mediaStreamId.isEmpty()) {
         GUniquePtr<gchar> name(gst_pad_get_name(pad));
         mediaStreamId = String::fromLatin1(name.get());
     }
